--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon api/index.js",
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/Wil-Colon/MERN-Blog-Mantine#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.2.3",
     "nodemon": "^3.1.0"
   }
 }
