--- a/package.json
+++ b/package.json
@@ -1,29 +1,33 @@
 {
-  "name": "blog-mern-3-mantine",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon api/index.js",
-    "start": "node api/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Wil-Colon/MERN-Blog-Mantine.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Wil-Colon/MERN-Blog-Mantine/issues"
-  },
-  "homepage": "https://github.com/Wil-Colon/MERN-Blog-Mantine#readme",
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.2.3",
-    "nodemon": "^3.1.0"
-  }
+    "name": "blog-mern-3-mantine",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "server": "nodemon api/index.js",
+        "client": "npm run dev --prefix client",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "start": "node api/index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Wil-Colon/MERN-Blog-Mantine.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Wil-Colon/MERN-Blog-Mantine/issues"
+    },
+    "homepage": "https://github.com/Wil-Colon/MERN-Blog-Mantine#readme",
+    "dependencies": {
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "mongoose": "^8.2.3",
+        "nodemon": "^3.1.0"
+    },
+    "devDependencies": {
+        "concurrently": "^8.2.2"
+    }
 }
