--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "server": "nodemon api/index.js",
+        "server": "nodemon index.js --prefix api",
         "client": "npm run dev --prefix client",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "dev": "concurrently \"npm run client\" \"npm run server\" ",
         "start": "node api/index.js"
     },
     "repository": {
@@ -22,8 +22,10 @@
     },
     "homepage": "https://github.com/Wil-Colon/MERN-Blog-Mantine#readme",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "express-validator": "^7.0.1",
         "mongoose": "^8.2.3",
         "nodemon": "^3.1.0"
     },
