--- a/client/package.json
+++ b/client/package.json
@@ -1,41 +1,44 @@
 {
-  "name": "client",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@mantine/carousel": "^7.5.2",
-    "@mantine/core": "^7.5.2",
-    "@mantine/dropzone": "^7.5.2",
-    "@mantine/form": "^7.5.2",
-    "@mantine/hooks": "^7.5.2",
-    "@mantine/modals": "^7.5.2",
-    "@tabler/icons-react": "^2.47.0",
-    "embla-carousel-react": "^7.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
-    "postcss-preset-mantine": "^1.13.0",
-    "postcss-simple-vars": "^7.0.1",
-    "sass": "^1.70.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.0"
-  }
+    "name": "client",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@mantine/carousel": "^7.5.2",
+        "@mantine/core": "^7.5.2",
+        "@mantine/dropzone": "^7.5.2",
+        "@mantine/form": "^7.5.2",
+        "@mantine/hooks": "^7.5.2",
+        "@mantine/modals": "^7.5.2",
+        "@reduxjs/toolkit": "^2.2.3",
+        "@tabler/icons-react": "^2.47.0",
+        "axios": "^1.6.8",
+        "embla-carousel-react": "^7.1.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^9.1.1",
+        "react-router-dom": "^6.22.1"
+    },
+    "devDependencies": {
+        "@types/react": "^18.2.55",
+        "@types/react-dom": "^18.2.19",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "@vitejs/plugin-react-swc": "^3.5.0",
+        "eslint": "^8.56.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.5",
+        "postcss": "^8.4.35",
+        "postcss-preset-mantine": "^1.13.0",
+        "postcss-simple-vars": "^7.0.1",
+        "sass": "^1.70.0",
+        "typescript": "^5.2.2",
+        "vite": "^5.1.0"
+    }
 }
