--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-validator": "^7.0.1",
+        "gravatar": "^1.8.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.2.3",
         "nodemon": "^3.1.0"
