--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "server": "nodemon index.js --prefix api",
         "client": "npm run dev --prefix client",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "concurrently \"npm run client\" \"npm run server\" ",
+        "dev": "concurrently \"npm run dev --prefix client\" \"npm run server\" ",
         "start": "node api/index.js"
     },
     "repository": {
