--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
         "@tabler/icons-react": "^2.47.0",
         "axios": "^1.6.8",
         "embla-carousel-react": "^7.1.0",
+        "moment": "^2.30.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.1",
