--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "homepage": "https://github.com/Wil-Colon/MERN-Blog-Mantine#readme",
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.779.0",
         "@reduxjs/toolkit": "^2.2.3",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
@@ -31,6 +32,8 @@
         "gravatar": "^1.8.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.2.3",
+        "multer": "^1.4.5-lts.2",
+        "multer-s3": "^3.0.1",
         "nodemon": "^3.1.0"
     },
     "devDependencies": {
